@@ -55,7 +55,7 @@
  * in re-enabling affected modules.
  */
 
-#define CL_FLEVEL 75
+#define CL_FLEVEL 77
 #define CL_FLEVEL_DCONF	CL_FLEVEL
 #define CL_FLEVEL_SIGTOOL CL_FLEVEL
 
@@ -283,6 +283,8 @@ struct cl_engine {
     uint64_t maxhtmlnotags; /* max size for scanning normalized HTML */
     uint64_t maxscriptnormalize; /* max size to normalize scripts */
     uint64_t maxziptypercg; /* max size to re-do zip filetype */
+
+    uint32_t forcetodisk; /* cause memory or map scans to dump to disk first */
 };
 
 struct cl_settings {
@@ -322,6 +324,8 @@ struct cl_settings {
     uint64_t maxhtmlnotags; /* max size for scanning normalized HTML */
     uint64_t maxscriptnormalize; /* max size to normalize scripts */
     uint64_t maxziptypercg; /* max size to re-do zip filetype */
+
+    uint32_t forcetodisk; /* cause memory or map scans to dump to disk first */
 };
 
 extern int (*cli_unrar_open)(int fd, const char *dirname, unrar_state_t *state);
