@@ -1,3 +1,7 @@
+Fri Nov 8 17:08:09 2013 EDT 2013 (morgan)
+------------------------------------
+ * Add ForceToDisk option for clamd and force-to-disk arg for clamscan
+
 Thu Oct 23 18:01:46 2013 EDT 2013 (dar)
 ------------------------------------
  * bb #9222: make fmap_unneed respect nested maps
